--- a/Scoreboardly.Application.Functions/Scoreboardly.Application.Functions.csproj
+++ b/Scoreboardly.Application.Functions/Scoreboardly.Application.Functions.csproj
@@ -16,4 +16,7 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Scoreboardly.Domain\Scoreboardly.Domain.csproj" />
+  </ItemGroup>
 </Project>
